<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:visibility="invisible"
        android:layout_marginTop="76dp"
        android:id="@+id/ivAvatar"/>

    <TextView android:layout_width="200dp"
        android:layout_height="200dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:visibility="invisible"
        android:layout_marginTop="76dp"
        android:id="@+id/tvAvatar"
        android:textSize="100sp"
        android:textColor="@android:color/white"
        android:background="@drawable/circle"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:id="@+id/textView"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvAvatar"
        android:text="@string/firstname"
        android:layout_marginStart="8dp"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/tvFirstName"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="8dp"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:id="@+id/textView2"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstName"
        android:text="@string/lastname"
        android:layout_marginStart="8dp"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/tvLastName"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="8dp"/>

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btnBack"
        android:textSize="8pt"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/btnToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/to_cart"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>